# papers-indexer

./: .gitignore  README.md  pyproject.toml
embedding/openai/: construct-kg.ipynb
ingestion/: .env  README.md  create_nodes_parallel.py  create_nodes_seq.py  main-parallel.py  main.py  query.py  types.py  utils.py
search_bulk/: README.md  get_dataset.py
